# iptv-db

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONVENTIONS.md  DEPLOY_ORDER.md  MIGRATION_GUIDE.md  MIGRATION_NOTES.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
src/iptv_db/: __init__.py
src/iptv_db/engine/: __init__.py
src/iptv_db/exceptions/: __init__.py
src/iptv_db/migrations/: env.py
src/iptv_db/migrations/versions/: 71fffd6203e2_initial_schema_unified.py
src/iptv_db/models/: __init__.py  base.py  calendario.py  channel.py  channel_mapping.py  channel_variant.py  config.py  content.py  replay.py  scraper.py  series.py  user.py  watch_progress.py
src/iptv_db/schemas/: __init__.py  channel.py  config.py  content.py  replay.py  scraper.py  series.py  user.py  watch_progress.py
tests/: test_imports.py
