[project]
name = "iptv-db"
version = "0.1.0"
description = "Shared ORM models, DTOs, and Alembic migrations for iptv-api and walactv-scrapper"
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "sqlalchemy>=2.0.50,<3.0",
    "alembic>=1.18.0,<2.0",
    "psycopg[binary]>=3.1.0,<4.0",
    "pydantic>=2.12.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iptv_db"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "B023", "UP015", "UP042", "UP046", "RUF001", "RUF012", "SIM105"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --tb=short"
markers = [
    "integration: integration tests requiring live database",
]
